refactor: add health check to api and docs
